feat: added test that a tx signed by the emergency keys is spendable